--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Some repo",
   "main": "index.js",
   "scripts": {
-    "test": " mocha "
+    "test": " mocha --timeout 15000 "
   },
   "repository": {
     "type": "git",
